[package]
name = "liwin"
version = "0.1.0"
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
description = "A light windowing library for Rust"
repository = "https://github.com/nils-mathieu/liwin"
license = "MIT"
readme = "README.md"

[features]
default = ["raw-window-handle"]

raw-window-handle = ["dep:rwh"]

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.48"
default-features = false
features = [
    "Win32_UI_Input",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Devices_HumanInterfaceDevice",
]

[dependencies]
rwh = { package = "raw-window-handle", version = "0.6", optional = true }
